# SC1000

./: .gitignore  README.md
docker/: Dockerfile  README.md  build-docker.sh  build-os.sh  build-sc1000.sh  deploy.sh  release.sh  run-docker.sh
os/: .gitignore
os/buildroot/: buildroot_config
os/buildroot/sc1000overlay/etc/init.d/: S50sc1000
os/buildroot/sc1000overlay/root/: sc1000-import
os/buildroot/sc1000overlay/root/libexec/: sc1000-import
prebuilt/: README.md  sc1000
software/: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  TODO.md  sc_settings.json  scsettings.bak  scsettings.txt  wrkspc.code-workspace  xwax.c  xwax.h
software/audio/: alsa.c  alsa.h  dummy.h
software/cmake/: arm-linux-gnueabihf.cmake  buildroot-uclibc.cmake
software/global/: global.c  global.h
software/input/: sc_input.c  sc_input.h  sc_midimap.c  sc_midimap.h  sc_queue.c
software/midi/: sc_midimap.c  sc_midimap.h
software/original_version/: controller.h  deck.h  dicer.h  realtime.h  sc_midimap.h  xwax.h
software/player/: controller.h  deck.c  deck.h  device.c  device.h  dicer.c  dicer.h  player.c  player.h  sc1000.c  sc1000.h  settings.h  track.c  track.h
software/src/: main.c  main.cpp  main.h  xwax.c  xwax.h
software/src/app/: audio_engine.cpp  audio_engine.h  global.h  sc1000.c  sc1000.h  sc_control_mapping.c  sc_control_mapping.h  sc_input.c  sc_input.cpp  sc_input.h  sc_settings.c  sc_settings.cpp  sc_settings.h
software/src/audio/: alsa.c  alsa.h  audio.h  audio_engine.cpp  dummy.c  dummy.h
software/src/buffers/: external.c
software/src/control/: actions.cpp  actions.h  input_state.h  mapping_registry.cpp  mapping_registry.h
software/src/core/: global.cpp  global.h  sc1000.cpp  sc1000.h  sc1000_ops.h  sc_control_mapping.h  sc_input.cpp  sc_input.h  sc_settings.cpp  sc_settings.h
software/src/desktop/: main_desktop.cpp  platform_desktop.cpp  platform_desktop.h
software/src/dsp/: cubic_interpolate_opt.h  sinc_interpolate_opt.h  sinc_table.h
software/src/engine/: audio_engine.cpp  audio_engine.h  cv_engine.cpp  cv_engine.h  deck_processing_state.h  interpolation_policy.h  loop_buffer.cpp  loop_buffer.h  sample_format.h
software/src/global/: global.c  global.h
software/src/input/: controller.c  controller.cpp  controller.h  midi.h  midi_command.h  midi_controller.cpp  midi_controller.h  midi_event.cpp  midi_event.h  midi_input.cpp  midi_input.h  midi_mapping.h  sc_input.c  sc_midimap.c  sc_midimap.h  sc_queue.c
software/src/platform/: alsa.cpp  alsa.h  crossfader.cpp  crossfader.h  dummy.cpp  dummy.h  encoder.cpp  encoder.h  gpio.cpp  gpio.h  i2c.cpp  i2c.h  midi.cpp  midi.h  pic.cpp  pic.h  platform.h  sc_hardware.cpp  sc_hardware.h
software/src/player/: controller.c  cues.c  cues.cpp  cues.h  deck.c  deck.cpp  deck.h  deck_input.h  deck_state.h  dicer.c  dicer.h  foo.cpp  player.c  player.cpp  player.h  player_state.h  playlist.c  playlist.cpp  playlist.h  recorder.h  sc1000.c  sc_playlist.c  settings.c  track.c  track.cpp  track.h
software/src/thread/: mutex.h  realtime.c  realtime.cpp  realtime.h  rig.cpp  rig.h  spin.h  thread.cpp  thread.h
software/src/util/: debug.h  event.h  external.cpp  external.h  list.h  log.cpp  log.h  spsc_queue.h  status.cpp  status.h  track_ref.h
software/test/output/: .gitignore
software/test/scripts/: analyze_test_output.py  run_tests.sh
software/test/src/: input_sequence.cpp  input_sequence.h  test_audio_backend.cpp  test_audio_backend.h  test_harness.cpp  test_harness.h  test_main.cpp  test_samples.cpp  test_samples.h  test_stubs.cpp
software/thread/: realtime.c  realtime.h  rig.c  rig.h
software/tools/: analyze_resampler.py  generate_sinc_table.py  resampler_test.cpp
updater/: buildupdater.sh  sc1000-boot
updater/tarball/: .gitignore
